<resources>
    <string name="app_name">findyourhomemate</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="Address">Address</string>
    <string name="sample_mail">sample@iyte.edu.tr</string>
    <string name="english">English</string>
    <string name="turkish">Turkish</string>
    <string name="signUp">Sign Up</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="update">Update</string>

</resources>
