<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTheme7"
    android:orientation="vertical"
    tools:context=".SignUp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@color/colorTheme5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signInUserNameTextView"
            android:layout_width="108dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="@color/colorTheme4"
            android:textIsSelectable="true"
            tools:textSize="18sp" />

        <EditText
            android:id="@+id/signInUserNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textColor="@color/colorTheme4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@color/colorTheme5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signInPasswordTextView"
            android:layout_width="99dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/colorTheme4"
            android:textIsSelectable="true"
            tools:textSize="18sp" />

        <EditText
            android:id="@+id/signInPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="text"
            android:textColor="@color/colorTheme4" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@color/colorTheme1"
        android:text="@string/login"
        android:textColor="@color/colorTheme4"
        android:onClick="logIn"/>

</LinearLayout>